fix: image alignment

--- a/public/ACM/css/ACM.css
+++ b/public/ACM/css/ACM.css
@@ -191,10 +191,11 @@ p {
 }
 
 .img-placeholder{
-	width: 100%;
+	max-width: 100%;
 	margin: 0 auto;
 	display: flex;
 	align-items: center;	
+	justify-content: center;
 }
 
 .card-text {
